--- a/src/App.css
+++ b/src/App.css
@@ -247,6 +247,7 @@
   position: relative;
   width: 420px;
   margin-right: 50px;
+  right: 400px;
 }
 
 .mobile-image-container {
@@ -255,6 +256,7 @@
   border-radius: 2.75rem;
   position: relative;
   transition: all 1s ease;  
+
 }
 .mobile-image-container img {
   border: 1px solid transparent;
@@ -288,8 +290,80 @@
 }
 
 .mobile-text-container {
-  width: 40%;
+  position: absolute;
+  right: 30px;
+  width: 50%;
   text-align: start;
+  z-index: 1;
+  cursor:default;
+}
+
+.mobile-text-container p{
+  font-family: Bungee Shade;
+  font-size: 93px;
+  line-height: 87px;
+  text-align: end;
+  transition: all .3s ease;
+}
+
+.mobile-text-container p:hover{
+  text-shadow: -4px 2px 8px rgba(0, 0, 0, 0.459);
+}
+
+.mobile-images-showup {
+  cursor: pointer;
+  gap: 120px;
+}
+
+
+.mobile-image-showup {
+  width: 13.5625rem;
+  height: 33.5rem;
+  border-radius: 2.75rem;
+}
+
+
+.mobile-image-showup img {
+  border: 1px solid transparent;
+  border-radius: 2.50rem;
+}
+
+
+.textos{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex:1;
+  width: 100%;
+  height: 100%
+}
+
+.imagenes{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  flex:1;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.texto-description{
+  position: absolute;
+  max-width: 400px;
+  background-color:#89F18D;
+  padding: 30px;
+  border-radius: 50px;
+  box-shadow: 3px 4px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.texto-description p{
+  line-height: 20px;
 }
 
 .green-bubble {
@@ -501,4 +575,22 @@ opacity: 0;
 }
 .opciones-compra{
   z-index: 2;
+}
+
+.footer {
+  background-color: rgb(43, 39, 39);
+  height: 100px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  flex: 1;
+}
+
+
+.botonContinuar{
+  padding: 10px 40px 10px 40px;
+  
+  border-radius: 5px;
+  background-color: #3140c5;
+  color: white;
 }
