--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;600;900&family=Spinnaker&family=Syne:wght@400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -59,9 +60,7 @@ body:has(.card[data-color="green"]:hover) {
     @apply flex justify-between items-center sm:px-16 px-8 py-4 max-w-5xl mx-auto absolute top-0 bg-transparent z-10 right-0 left-0;
   }
 
-  .footer {
-    @apply max-w-5xl mx-auto sm:px-16 pb-6 px-8 flex flex-col gap-7;
-  }
+ 
 
   .footer-container {
     @apply flex flex-wrap gap-7 items-center justify-between;
