--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,7 @@
 }
 
 .mobile2-image-container {
+  z-index: 2;
   width: 14.15056rem;
   height: 29.58038rem;
   transform: rotate(1deg);
@@ -273,12 +274,15 @@
   right: 10px;
   position: absolute;
   transition: all 1s cubic-bezier(0.16, 0.44, 0.32, 1.175);
+  bottom:-40px
 }
 
 .mobile2-image-container img {
   border: 1px solid transparent;
   border-radius: 2.40rem;
 }
+
+
 
 .mobile-images-container:hover .mobile-image-container {
   transform: translateX(-24px) rotate(2deg);
@@ -300,7 +304,7 @@
 
 .mobile-text-container p{
   font-family: Bungee Shade;
-  font-size: 93px;
+  font-size: 4.8rem;
   line-height: 87px;
   text-align: end;
   transition: all .3s ease;
@@ -310,15 +314,45 @@
   text-shadow: -4px 2px 8px rgba(0, 0, 0, 0.459);
 }
 
+
+@media screen and (max-width:1370px){
+  
+  
+  .mobile-image-container {
+    width: 15.5625rem;
+    height: 37.5rem;
+    border-radius: 2.15rem;
+  
+  }
+  .mobile-image-container img {
+    border-radius: 2.30rem;
+  }
+  
+  .mobile2-image-container {
+    width: 13.15056rem;
+    height: 26.58038rem;
+    bottom:20px;  
+  }
+  
+  .mobile2-image-container img {
+    border-radius: 2.30rem;
+
+  }
+  
+  .mobile-text-container p{
+    font-size: 4rem;
+    line-height: 3.8rem;
+  }
+  }
+
 .mobile-images-showup {
-  cursor: pointer;
   gap: 120px;
 }
 
 
 .mobile-image-showup {
-  width: 13.5625rem;
-  height: 33.5rem;
+  width: 10.5625rem;
+  height: 30.5rem;
   border-radius: 2.75rem;
 }
 
@@ -354,16 +388,41 @@
 
 
 .texto-description{
+  cursor:pointer;
   position: absolute;
-  max-width: 400px;
+  max-width: 20rem;
   background-color:#89F18D;
-  padding: 30px;
+  padding: 1.7rem;
   border-radius: 50px;
+  transition: all .4s ease-in-out;
   box-shadow: 3px 4px 10px 10px rgba(0, 0, 0, 0.25);
 }
 
 .texto-description p{
   line-height: 20px;
+  font-size: 0.8rem;
+}
+
+.texto-description:hover{
+  transform: scale(1.1);
+}
+
+@media screen and (max-width:1370px){
+  .texto-description {
+    padding:1.5rem;
+    max-width: 24rem;
+    border-radius: 30px ;
+  }
+
+  .mobile-image-showup {
+    width: 7.5625rem;
+    height: 23.5rem;
+    border-radius: 1.75rem;
+  }
+
+  .mobile-image-showup img {
+    border-radius: 1.50rem;
+  }
 }
 
 .green-bubble {
@@ -579,13 +638,80 @@ opacity: 0;
 
 .footer {
   background-color: rgb(43, 39, 39);
-  height: 100px;
+  height: 200px;
   position: relative;
   display: flex;
   width: 100%;
   flex: 1;
+  bottom:0px;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
+.footer .firstTable label{
+  color:white;
+}
+
+.footer .firstTable {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.footer .firstTable a{
+  cursor:pointer;
+  padding:2px;
+  transition: all .2s ease;
+}
+
+.footer .firstTable a .firstTableText{
+  cursor:pointer;
+}
+
+.footer .firstTable a:hover{
+
+  transform: scale(1.03);
+}
+
+
+.footer .secondTable {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.footer div label{
+  color:white;
+  font-size: 1.17rem;
+}
+
+
+.footer div h4{
+  color:white;
+  font-size: 1.8rem;
+}
+
+.footer .tercerTable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+
+.footer .tercerTable label{
+  color:white;
+  margin-right: 20px;
+}
+
+.footer .tercerTable a{
+  cursor: pointer;
+}
+
+.footer .tercerTable a img{
+  cursor: pointer;
+  width:10rem;
+}
 
 .botonContinuar{
   padding: 10px 40px 10px 40px;
