--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 }
 
 .nav-bar {
+  
   width: 100%;
   background-color: #4edb54;
   height: 75px;
@@ -24,8 +25,9 @@
 }
 
 .video-presentacion {
-  position: absolute;
+  
   width: 100%;
+  position: absolute;
   top: 0px;
   left: 0px;
   z-index: 0;
@@ -90,13 +92,13 @@
 .boton-mira-como{
   width:8rem;
   display: flex;
+  align-self: center;
   align-items: center;
   justify-content: center;
   padding:10px;
   background-color: #055f09;
   color:white;
   border-radius: 30px;
-  margin-left: 215px;
   margin-top: 20px;
 }
 
@@ -116,14 +118,26 @@
   border-radius: 20px;
 }
 
+.initialPageContainer{
+  background-color: #25992c;
+  height: 100vh;
+  display: flex;
+  padding: 10%;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  position: relative;
+  flex-direction: row;
+}
+
 .titles-container {
-  align-items: flex-center;
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
   text-align: start;
   z-index: 1;
   width: fit-content;
+  
+  align-self: center;
 }
 
 .titles-container h1 {
@@ -152,7 +166,6 @@
   color: #c0f5c3;
   text-align: center;
   align-self: center;
-  margin-right: 140px;
   background-color: #ffffff2f;
 
   font-family: Syne;
@@ -178,13 +191,11 @@
 
 .image-container {
   cursor: pointer;
-  position: absolute;
+  position: relative;
+  align-self: center;
   z-index: 1;
   min-width: 600px;
   width: 44vw;
-  height: 24vw;
-  right: 3%;
-  bottom:18%;
   border-radius: 2.125rem;
   border: 4px solid #aff2b1;
   box-shadow: 3px 4px 19.3px 3px rgba(0, 0, 0, 0.25);
@@ -253,7 +264,8 @@
 .mobile-images-container {
   cursor: pointer;
   position: relative;
-  width: 30%;
+  width: 24%;
+  height: 80%;
   margin-right: 5%;
   margin-left: 10%;
 }
@@ -437,7 +449,7 @@
 }
 
 .texto-description p {
-  line-height: 0.95rem;
+  line-height: 1.2rem;
   font-size: "20%";
   z-index: 3;
 }
@@ -803,4 +815,63 @@
   border-radius: 5px;
   background-color: #3140c5;
   color: white;
+}
+
+/*RESPONSIVE REGION*/
+
+/*Small screen*/
+@media screen and (max-width: 1370px) {
+
+  .mobile-images-container {
+    width: 30%;
+    height: 80%;
+
+  }
+  .initialPageContainer{
+    gap: 60px;
+    flex-direction: column;
+  }
+
+  .titles-container{
+    text-align: center;
+  }
+  
+  .image-container{
+    min-width: 400px;
+  }
+}
+
+
+@media screen and (max-width: 1122px) {
+  
+  .mobile-images-container {
+    width: 35%;
+    height: 80%;
+
+  }
+
+  .second-page-container{
+    flex-direction: column;
+  }
+
+  
+
+  .image-container {
+    min-width: 500px;
+    min-height: 100px;
+    width: 44vw;
+    height: 30vh;
+
+  }
+
+}
+
+/*Big phone and tablets*/
+@media screen and (max-width: 732px) {
+  
+}
+
+/*Small phones*/
+@media screen and (max-width: 510px) {
+  
 }
