--- a/src/App.css
+++ b/src/App.css
@@ -440,6 +440,7 @@
 .texto-description {
   cursor: pointer;
   width: "10%";
+  position: relative;
   min-width: 20rem;
   background-color: #89f18d;
   padding: 1.7rem;
@@ -447,6 +448,40 @@
   transition: all 0.4s ease-in-out;
   box-shadow: 3px 4px 10px 10px rgba(0, 0, 0, 0.25);
 }
+
+.texto-description.right svg{
+  position: absolute;
+  top: -20px;
+  left: -22px;
+  background-color: #89f18d;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+
+.texto-description.left svg{
+  position: absolute;
+  top: -20px;
+  right: -45px;
+  background-color: #89f18d;
+  border-radius: 25px;
+  padding: 10px;
+}
+
+.texto-description svg.yellow{
+  border: 3px solid rgb(217, 221, 0);
+}
+
+
+.texto-description svg.orange{
+  border: 2px solid rgb(228, 148, 0);
+}
+
+
+.texto-description svg.blue{
+  border: 2px solid rgb(55, 30, 196);
+}
+
 
 .texto-description p {
   line-height: 1.2rem;
