--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 100%;
   margin: 0 auto;
   text-align: center;
 }
@@ -10,8 +9,14 @@
   overflow-x: hidden;
 }
 
+.main-container {
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 .nav-bar {
-  
   width: 100%;
   background-color: #4edb54;
   height: 75px;
@@ -25,12 +30,16 @@
 }
 
 .video-presentacion {
-  
-  width: 100%;
+  width: 100vw;
   position: absolute;
   top: 0px;
   left: 0px;
   z-index: 0;
+  min-height: 100vh;
+}
+
+.video-presentacion svg {
+  min-height: 100vh;
 }
 
 .logo-new {
@@ -89,15 +98,15 @@
   }
 }
 
-.boton-mira-como{
-  width:8rem;
+.boton-mira-como {
+  width: 8rem;
   display: flex;
   align-self: center;
   align-items: center;
   justify-content: center;
-  padding:10px;
+  padding: 10px;
   background-color: #055f09;
-  color:white;
+  color: white;
   border-radius: 30px;
   margin-top: 20px;
 }
@@ -118,15 +127,22 @@
   border-radius: 20px;
 }
 
-.initialPageContainer{
+.initialPageContainer {
   background-color: #25992c;
-  height: 100vh;
   display: flex;
   padding: 10%;
   justify-content: space-evenly;
   align-items: flex-end;
   position: relative;
   flex-direction: row;
+}
+
+.defaultContainer {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .titles-container {
@@ -136,7 +152,7 @@
   text-align: start;
   z-index: 1;
   width: fit-content;
-  
+
   align-self: center;
 }
 
@@ -145,7 +161,7 @@
 
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: Source Sans 3;
-  font-size: 6.25rem;
+  font-size: 6.25em;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
@@ -155,7 +171,7 @@
   color: #c0f5c3;
 
   font-family: Spinnaker;
-  font-size: 61.805px;
+  font-size: 3.25em;
   font-style: normal;
   font-weight: 400;
   line-height: 62px;
@@ -169,7 +185,7 @@
   background-color: #ffffff2f;
 
   font-family: Syne;
-  font-size: 25px;
+  font-size: 1em;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -195,9 +211,9 @@
   align-self: center;
   z-index: 1;
   min-width: 600px;
-  width: 44vw;
-  border-radius: 2.125rem;
-  border: 4px solid #aff2b1;
+  min-height: 300px;
+  width: 44%;
+  border-radius: 0.7rem;
   box-shadow: 3px 4px 19.3px 3px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   opacity: 1;
@@ -247,25 +263,19 @@
   }
 }
 
-.image-container .img {
-  width: 53vw;
-  height: 43vh;
-  z-index: 1;
-  transition: all 1s ease-in-out;
-}
-.second-page-container{
+.second-page-container {
   display: flex;
   flex-direction: row;
- justify-content: space-between;
- flex:1;
- height: 100vh;
+  justify-content: space-between;
+  flex: 1;
+  min-height: 100vh;
 }
 
 .mobile-images-container {
   cursor: pointer;
   position: relative;
   width: 24%;
-  height: 80%;
+  min-height: 80%;
   margin-right: 5%;
   margin-left: 10%;
 }
@@ -312,7 +322,7 @@
 .mobile-text-container {
   position: absolute;
   right: 2%;
-  top:10%;
+  top: 10%;
   width: 60%;
   text-align: start;
   z-index: 1;
@@ -331,32 +341,6 @@
   text-shadow: -4px 2px 8px rgba(0, 0, 0, 0.459);
 }
 
-@media screen and (max-width: 1370px) {
-  .mobile-image-container {
-    width: 15.5625rem;
-    height: 37.5rem;
-    border-radius: 2.15rem;
-  }
-  .mobile-image-container img {
-    border-radius: 2.3rem;
-  }
-
-  .mobile2-image-container {
-    width: 13.15056rem;
-    height: 26.58038rem;
-    bottom: 20px;
-  }
-
-  .mobile2-image-container img {
-    border-radius: 2.3rem;
-  }
-
-  .mobile-text-container p {
-    font-size: 4rem;
-    line-height: 3.8rem;
-  }
-}
-
 .mobile-images-showup {
   gap: 10px;
   width: 100%;
@@ -366,8 +350,8 @@
   z-index: 2;
 }
 
+
 .mobile-image-showup {
-  width: "10%";
   border-radius: 2.75rem;
   position: absolute;
 }
@@ -388,7 +372,7 @@
 }
 
 .imagenes-container {
-  height: 100%;
+  min-height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -400,13 +384,14 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-bottom: 4em;
 }
 
 .slider-controls {
   justify-content: center;
   align-items: flex-start;
   display: flex;
-  gap:10px;
+  gap: 10px;
   margin-bottom: 30px;
 }
 .slider-controls button {
@@ -415,15 +400,16 @@
   z-index: 20;
   cursor: pointer;
 }
-.dot{
+
+.dot {
   cursor: pointer;
   width: 10px;
   height: 10px;
   padding: 10px;
   border-radius: 10px;
   background-color: white;
-  z-index: 10;
-  transition: all .4s ease-in-out;
+  z-index: 12;
+  transition: all 0.4s ease-in-out;
 }
 
 .textos-app {
@@ -431,8 +417,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap:20px;
-  margin-left:30px;
+  gap: 20px;
   align-items: center;
   justify-content: space-around;
 }
@@ -449,7 +434,7 @@
   box-shadow: 3px 4px 10px 10px rgba(0, 0, 0, 0.25);
 }
 
-.texto-description.right svg{
+.texto-description.right svg {
   position: absolute;
   top: -20px;
   left: -22px;
@@ -458,8 +443,7 @@
   padding: 10px;
 }
 
-
-.texto-description.left svg{
+.texto-description.left svg {
   position: absolute;
   top: -20px;
   right: -45px;
@@ -468,20 +452,17 @@
   padding: 10px;
 }
 
-.texto-description svg.yellow{
+.texto-description svg.yellow {
   border: 3px solid rgb(217, 221, 0);
 }
 
-
-.texto-description svg.orange{
+.texto-description svg.orange {
   border: 2px solid rgb(228, 148, 0);
 }
 
-
-.texto-description svg.blue{
+.texto-description svg.blue {
   border: 2px solid rgb(55, 30, 196);
 }
-
 
 .texto-description p {
   line-height: 1.2rem;
@@ -563,6 +544,10 @@
   .mobile-image-showup img {
     border-radius: 1.5rem;
   }
+
+  
+
+
 }
 
 .green-bubble {
@@ -575,16 +560,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
-.green-bubble h3{
+.green-bubble h3 {
   position: absolute;
   z-index: 2;
 }
-
-
-
 
 .left-bubble {
   border-bottom-left-radius: 0px;
@@ -623,6 +604,7 @@
 }
 
 .opciones-compra {
+  z-index: 2;
   display: flex;
   gap: 50px;
   align-items: center;
@@ -630,7 +612,7 @@
 
 .opcion-compra {
   width: 16.3125rem;
-  height: 26.8125rem;
+  min-height: 26.8125rem;
   border-radius: 4.875rem;
   border: 5px solid #000;
 
@@ -669,7 +651,7 @@
 
 .opcion-compra.selected {
   width: 17.625rem;
-  height: 27.875rem;
+  min-height: 27.875rem;
   box-shadow: 3px 4px 10px 3px rgba(0, 0, 0, 0.25);
 }
 
@@ -732,6 +714,17 @@
   opacity: 1;
 }
 
+#disenio-3d {
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.canvas-style {
+  height: 90vh !important;
+  position: absolute;
+  z-index: 4;
+}
+
 .device-title {
   position: absolute;
   font-family: Spinnaker;
@@ -774,9 +767,6 @@
   border: 2px solid #0a7e0e;
   background-color: white;
   color: #0a7e0e;
-}
-.opciones-compra {
-  z-index: 2;
 }
 
 .footer {
@@ -824,7 +814,7 @@
 
 .footer div label {
   color: white;
-  font-size: 1.00rem;
+  font-size: 1rem;
 }
 
 .footer div h4 {
@@ -851,7 +841,7 @@
 .footer .tercerTable a img {
   cursor: pointer;
   width: 10rem;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 .footer .tercerTable a img:hover {
   transform: scale(1.03);
@@ -869,57 +859,400 @@
 
 /*Small screen*/
 @media screen and (max-width: 1370px) {
+  .mobile-image-container {
+    width: 15.5625rem;
+    height: 37.5rem;
+    border-radius: 2.15rem;
+  }
+  .mobile-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile2-image-container {
+    width: 13.15056rem;
+    height: 26.58038rem;
+    bottom: 20px;
+  }
+
+  .mobile2-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile-text-container p {
+    font-size: 4rem;
+    line-height: 3.8rem;
+  }
 
   .mobile-images-container {
     width: 30%;
-    height: 80%;
-
+    min-height: 80%;
   }
-  .initialPageContainer{
+  .initialPageContainer {
     gap: 60px;
     flex-direction: column;
   }
 
-  .titles-container{
+  .titles-container {
     text-align: center;
   }
-  
-  .image-container{
+
+  .image-container {
     min-width: 400px;
+    min-height: 200px;
+    width: 70%;
+  }
+
+  #disenio-3d {
+    flex-direction: column;
+    max-height: 50%;
+  }
+
+  .canvas-style {
+    height: 80vh !important;
+    position: relative;
+    z-index: 4;
+  }
+
+  .call-to-action {
+    display: none;
+  }
+
+  .info-text-container.left {
+    margin-top: 7rem;
+    align-self: flex-start;
+  }
+
+  .info-text-container.right {
+    align-self: flex-end;
+  }
+
+  .info-text-container p{
+  font-size: 1.2em;
+  }
+
+  .device-title {
+    display: none;
   }
 }
 
-
 @media screen and (max-width: 1122px) {
-  
   .mobile-images-container {
     width: 35%;
-    height: 80%;
-
+    min-height: 80%;
   }
 
-  .second-page-container{
-    flex-direction: column;
+  .titles-container h3 {
+    display: none;
   }
-
-  
 
   .image-container {
     min-width: 500px;
-    min-height: 100px;
-    width: 44vw;
-    height: 30vh;
-
+    min-height: 30vh;
+    width: 70vw;
   }
 
+  .mobile-image-container {
+    width: 15.5625rem;
+    height: 37.5rem;
+    border-radius: 2.15rem;
+  }
+  .mobile-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile2-image-container {
+    width: 13.15056rem;
+    height: 26.58038rem;
+    bottom: 20px;
+  }
+
+  .mobile2-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile-text-container {
+    position: relative;
+  }
+
+  .mobile-text-container p {
+    font-size: 4rem;
+    line-height: 3.8rem;
+  }
+
+  .mobile-images-showup {
+    gap: 20px;
+    width: 95%;
+    display: flex;
+    justify-content: space-evenly;
+    z-index: 2;
+  }
+
+  .mobile-image-showup {
+    justify-content: center;
+    position: absolute;
+    padding-left: 20px;
+  }
+
+  .mobile-image-showup img {
+    
+    height: 60vh;
+    border: 1px solid transparent;
+    border-radius: 1.6rem;
+  }
+
+
+
+  .imagenes-container {
+    min-height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imagenes {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .slider-controls {
+    display:none
+  }
+  
+  .textos-app {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .texto-description {
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    background-color: #89f18d;
+    border-radius: 20px;
+    margin: 0px !important;
+  }
+
+  .texto-description.right svg {
+    display: none;
+  }
+
+  .texto-description.left svg {
+    display: none;
+  }
+
+  .texto-description p {
+    line-height: 1.2rem;
+    z-index: 3;
+  }
 }
 
 /*Big phone and tablets*/
-@media screen and (max-width: 732px) {
+@media screen and (max-width: 852px) {
+  .opciones-compra {
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .opcion-compra {
+    width: 90vw;
+    min-height: 10vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .opcion-compra.version1:active {
+    transform: rotateY(0deg);
+  }
+
+  .opcion-compra.version2:active {
+    transform: rotateY(0deg);
+  }
+  .opcion-compra.version3:active {
+    transform: rotateY(0deg);
+  }
+
+  .opcion-compra.selected {
+    width: 90vw;
+    min-height: 10vh;
+  }
+
+  .opcion-compra h1 {
+    margin-bottom: 1.2rem;
+  }
+
+  .opcion-compra ul {
+    align-self: flex-start;
+  }
+
+  .second-page-container {
+    flex-direction: column-reverse;
+  }
+
+  .mobile-images-container {
+    width: 90%;
+  }
+
+  .mobile-image-container {
+    border-radius: 2.15rem;
+  }
+  .mobile-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile2-image-container {
+    width: 13.15056rem;
+    height: 26.58038rem;
+    bottom: 20px;
+  }
+
+  .mobile2-image-container img {
+    border-radius: 2.3rem;
+  }
+
+  .mobile-text-container {
+    position: relative;
+    flex-direction: column;
+    display: flex;
+    align-items: flex-start;
+    align-self: center;
+    width: 90%;
+  }
+
+  .mobile-text-container p {
+    font-size: 2rem;
+    line-height: 2rem;
+    text-align: start;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .nav-bar {
+    opacity: 0.9;
+  }
+
+  .nav-bar .navigate-tabs a {
+    display: none;
+  }
+
+  .image-container {
+    min-width: 600px;
+    min-height: 300px;
+    width: 44vw;
+  }
+
+  .mobile-images-showup {
+    gap: 0px;
+    width: 100%;
+    display: grid;
+    justify-content: space-evenly;
+    z-index: 2;
+  }
+
+  .mobile-image-showup {
+    position: absolute;
+  }
+
+  .mobile-image-showup img {
+    
+    height: 40vh;
+    border: 1px solid transparent;
+    border-radius: 1.6rem;
+  }
+
+ 
+
+  .imagenes-container {
+    margin-top: 120px;
+    padding-bottom: 180px;
+    margin-left: 6em;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imagenes {
+    position: relative;
+  }
+
+  .slider-controls {
+    display:none
+  }
   
+  .textos-app {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .texto-description {
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    background-color: #89f18d;
+    border-radius: 20px;
+    margin: 0px !important;
+  }
+
+  .texto-description.right svg {
+    position: absolute;
+    top: -20px;
+    left: -22px;
+    background-color: #89f18d;
+    border-radius: 20px;
+    padding: 10px;
+  }
+
+  .texto-description.left svg {
+    display: none;
+  }
+
+  .texto-description p {
+    line-height: 1.2rem;
+    z-index: 3;
+  }
 }
 
 /*Small phones*/
-@media screen and (max-width: 510px) {
-  
+@media screen and (max-width: 638px) {
+  .opcion-compra {
+    border-radius: 2.3em;
+  }
+
+  .titles-container {
+    margin-top: 6em;
+  }
+  .titles-container h1 {
+    font-size: 3em;
+  }
+
+  .titles-container h2 {
+    font-size: 2em;
+    line-height: 1em;
+  }
+
+  .image-container {
+    border-radius: 0.8em;
+    min-width: 93vw;
+    min-height: 5em;
+    width: 44%;
+  }
 }
